<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fon"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/white"
    tools:context=".MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textlayout1"
        android:layout_width="0dp"
        android:layout_height="61dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="6dp"
        app:hintTextColor="#B3B3B0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <AutoCompleteTextView
            android:id="@+id/autoCompleteTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/gradient"
            android:gravity="center"
            android:hint="@string/number_color"
            android:inputType="none|textAutoComplete"
            android:textColorHint="@color/white"
            android:textStyle="bold"
            app:autoSizeTextType="uniform" />


    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.0"
        android:gravity="center"
        android:text="@string/base_color"
        android:padding="5dp"
        android:background="@color/green_fon"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textlayout1"
        app:layout_constraintTop_toBottomOf="@+id/textlayout1" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.4"
        android:gravity="center"
        android:background="@color/green_fon"
        android:text="@string/percent"
        android:padding="5dp"
        android:layout_marginBottom="2dp"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintStart_toEndOf="@+id/textView1"
        app:layout_constraintTop_toBottomOf="@+id/textlayout1" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="101dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.3"
        android:gravity="center"
        android:text="@string/massa_base_color"
        android:padding="5dp"
        android:background="@color/green_fon"
        app:layout_constraintEnd_toEndOf="@id/textlayout1"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <EditText
        android:id="@+id/basecolor1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:ems="1"
        android:gravity="left"
        android:padding="5dp"
        android:inputType="none|textPersonName|text"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/percent1"
        app:layout_constraintStart_toStartOf="@+id/textView1"
        app:layout_constraintTop_toBottomOf="@+id/textView1"
        app:autoSizeTextType="uniform"/>

    <EditText
        android:id="@+id/percent1"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toEndOf="@+id/textView1"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:autoSizeTextType="uniform"
        style="@style/EditTextView" />

    <EditText
        android:id="@+id/weightcolor1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:ems="1"
        android:gravity="left"
        android:padding="5dp"
        android:inputType="text|numberDecimal"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:autoSizeTextType="uniform"/>

    <EditText
        android:id="@+id/basecolor2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:ems="1"
        android:gravity="left"
        android:padding="5dp"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/basecolor1"
        app:layout_constraintStart_toStartOf="@+id/basecolor1"
        app:layout_constraintTop_toBottomOf="@+id/basecolor1"
        app:autoSizeTextType="uniform"/>

    <EditText
        android:id="@+id/weightcolor2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:ems="1"
        android:inputType="text|numberDecimal"
        android:gravity="left"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="@+id/weightcolor1"
        app:layout_constraintStart_toEndOf="@+id/percent1"
        app:layout_constraintTop_toBottomOf="@+id/weightcolor1"
        app:autoSizeTextType="uniform"/>

    <EditText
        android:id="@+id/percent2"
        app:layout_constraintEnd_toStartOf="@+id/weightcolor2"
        app:layout_constraintStart_toEndOf="@+id/basecolor2"
        app:layout_constraintTop_toBottomOf="@+id/percent1"
        app:autoSizeTextType="uniform"
        style="@style/EditTextView" />

    <EditText
        android:id="@+id/weightcolor3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:ems="1"
        android:inputType="text|numberDecimal"
        android:gravity="left"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="@+id/weightcolor2"
        app:layout_constraintStart_toStartOf="@+id/weightcolor2"
        app:layout_constraintTop_toBottomOf="@+id/weightcolor2"
        app:autoSizeTextType="uniform"
        android:autofillHints="" />

    <EditText
        android:id="@+id/percent3"
        app:layout_constraintEnd_toStartOf="@+id/weightcolor2"
        app:layout_constraintStart_toEndOf="@+id/basecolor2"
        app:layout_constraintTop_toBottomOf="@+id/percent2"
        app:autoSizeTextType="uniform"
        style="@style/EditTextView" />

    <EditText
        android:id="@+id/basecolor3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:ems="1"
        android:gravity="left"
        android:padding="5dp"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/basecolor2"
        app:layout_constraintStart_toStartOf="@+id/basecolor2"
        app:layout_constraintTop_toBottomOf="@+id/basecolor2"
        app:autoSizeTextType="uniform"/>

    <EditText
        android:id="@+id/weightcolor4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:ems="1"
        android:gravity="left"
        android:padding="5dp"
        android:inputType="text|numberDecimal"
        app:layout_constraintEnd_toEndOf="@+id/weightcolor3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/weightcolor3"
        app:layout_constraintTop_toBottomOf="@+id/weightcolor3"
        app:autoSizeTextType="uniform"/>

    <EditText
        android:id="@+id/percent4"
        app:layout_constraintEnd_toStartOf="@+id/weightcolor3"
        app:layout_constraintStart_toStartOf="@+id/percent3"
        app:layout_constraintTop_toBottomOf="@+id/percent3"
        app:autoSizeTextType="uniform"
        style="@style/EditTextView" />

    <EditText
        android:id="@+id/basecolor4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:ems="1"
        android:gravity="left"
        android:padding="5dp"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/percent3"
        app:layout_constraintStart_toStartOf="@+id/basecolor3"
        app:layout_constraintTop_toBottomOf="@+id/basecolor3"
        app:autoSizeTextType="uniform"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        app:layout_constraintEnd_toEndOf="@+id/weightcolor4"
        app:layout_constraintStart_toStartOf="@+id/basecolor4"
        app:layout_constraintTop_toBottomOf="@+id/percent4">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/massa"
            android:hint="@string/massa_total"
            app:autoSizeTextType="uniform"
            style="@style/massa" />



    </com.google.android.material.textfield.TextInputLayout>









    <FrameLayout
        android:id="@+id/frameLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout3"
        app:layout_constraintBottom_toTopOf="@id/linear"
        style="@style/Frame">




        <TextView
            android:id="@+id/colorsampl"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:visibility="gone" />
    </FrameLayout>
    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="@+id/textInputLayout3"
        app:layout_constraintRight_toRightOf="@+id/textInputLayout3"
        app:layout_constraintBottom_toBottomOf="@+id/fon" >




        <Button
            android:id="@+id/button"
            android:text="@string/clearAll"
            style="@style/Button" />
        <Button
            android:id="@+id/button2"
            android:text="m"
            style="@style/Button2" />
        <Button
            android:id="@+id/button3"
            android:text="@string/round"
            style="@style/Button3" />
        <Button
            android:id="@+id/button4"
            android:text="@string/calculate"
            style="@style/Button4" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/frameLayout"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout3"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout3"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout3">

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="409dp"
            android:layout_height="wrap_content"
            app:adSize="BANNER"
            app:adUnitId="ca-app-pub-3940256099942544/6300978111">

        </com.google.android.gms.ads.AdView>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>